--- a/frontend/web/css/layout-responsive.css
+++ b/frontend/web/css/layout-responsive.css
@@ -17,7 +17,7 @@ body.boxed #header .main-header {
 	width:1230px;
 	margin:0 auto;
 }
-.boxed  #enigma_nav_top.affix{
+.boxed  #alpe_nav_top.affix{
 max-width: 1230px;
 
 }
