--- a/frontend/web/css/media-responsive.css
+++ b/frontend/web/css/media-responsive.css
@@ -1,12 +1,12 @@
 @media (min-width:1200px) {
-	.enigma_gallery_page .col-md-3{
+	.alpe_gallery_page .col-md-3{
 	width:25%;
 	}
 	.navbar {
 	margin-bottom: 0px; 
 
 	}
-	#enigma_nav_top.affix {
+	#alpe_nav_top.affix {
     position: fixed;
     top: 0;
     width: 100%;
@@ -24,7 +24,7 @@
 }
 
 @media (min-width:992px) and (max-width:1199px) {
-	#enigma_nav_top.affix {
+	#alpe_nav_top.affix {
     position: fixed;
     top: 0;
     width: 100%;
@@ -39,7 +39,7 @@
 
 @media only screen and (min-width: 960px) and (max-width: 1200px) {
 
-	.enigma_gallery_page .col-md-3{
+	.alpe_gallery_page .col-md-3{
 		width:25%;
 	}
 	.post-content-wrap {
@@ -52,7 +52,7 @@
 	margin-bottom: 0px; 
 
 	}
-	#enigma_nav_top.affix {
+	#alpe_nav_top.affix {
     position: fixed;
     top: 0;
     width: 100%;
@@ -60,7 +60,7 @@
 	z-index: 99997;
 	left: 0;
 	}
-	.enigma_gallery_blog{
+	.alpe_gallery_blog{
 	width: 33.3%;
 	margin-right: 0;
 	margin-bottom: 0;
@@ -104,7 +104,7 @@
 		margin-bottom: 0px; 
 
 	}
-	#enigma_nav_top.affix {
+	#alpe_nav_top.affix {
     position: fixed;
     top: 0;
     width: 100%;
@@ -132,24 +132,24 @@
 	top: 60px;
 	margin: 0px auto;
 	}
-	.enigma_callout_area{
+	.alpe_callout_area{
 		text-align:center;
 	}
-	.enigma_callout_area p{
+	.alpe_callout_area p{
 		margin-bottom:20px;
 		padding:0px;
 	}
-	.enigma_callout_btn {
+	.alpe_callout_btn {
 	float: none;	
 	}
 	
 	/*** blog full width **/
-	.enigma_sidebar_left_side{
+	.alpe_sidebar_left_side{
 
 	float:none;
 
 	}
-	.enigma_blog_right_side{
+	.alpe_blog_right_side{
 	float:none;
 	}
 	.post-content-wrap {
@@ -167,49 +167,49 @@
 		margin-bottom: 0px;
 	}
 	
-	.enigma_fuul_blog_detail_padding {
+	.alpe_fuul_blog_detail_padding {
 		padding-left: 0px;
 		padding-top:20px;
 	}
-	.enigma_blog_full .enigma_blog_thumb_wrapper_showcase {
+	.alpe_blog_full .alpe_blog_thumb_wrapper_showcase {
 		margin-bottom: 0px;
 	}
 	.navbar-collapse {
      max-height: none;
 	 }
-	 .enigma_project_section .caroufredsel_wrapper{
+	 .alpe_project_section .caroufredsel_wrapper{
 		height: 350px !important;
 	 }
-	 .enigma_client_area .caroufredsel_wrapper{
+	 .alpe_client_area .caroufredsel_wrapper{
 		height: 250px !important;
 	 }
-	 .enigma_project_detail_related_projet .caroufredsel_wrapper{ 
+	 .alpe_project_detail_related_projet .caroufredsel_wrapper{
 		height: 350px !important;
 	 }
-	 /** enigma footer  copyright area ***/
-	 .enigma_footer_area{
+	 /** alpe footer  copyright area ***/
+	 .alpe_footer_area{
 	 text-align:center;
 	 }
-	 .enigma_footer_copyright_info{
+	 .alpe_footer_copyright_info{
 		float:none;
 	}
-	.enigma_footer_social_div{
+	.alpe_footer_social_div{
 		float:none;
 	}
 	/** contact us page **/
-	.enigma_contact_form_fields{
+	.alpe_contact_form_fields{
 	padding-right: 15px;
 	padding-top: 30px;
 	padding-bottom: 30px;
 	border-right: 0px solid #E5E5E5;
 	}
-	.enigma_contact_info{
+	.alpe_contact_info{
 		padding-left: 15px;
 		padding-top: 30px;
 		padding-bottom: 30px;
 	}
 	/* gallery */
-	.enigma_gallery_blog{
+	.alpe_gallery_blog{
 	width: 33.3%;
 	margin-right: 0;
 	margin-bottom: 0;
@@ -218,7 +218,7 @@
 	.carousel-indicators{
 		display:none;
 	}
-	/*.carousel-text .enigma_blog_read_btn{
+	/*.carousel-text .alpe_blog_read_btn{
 		display:none;
 	}*/
 	.carousel-caption {
@@ -273,23 +273,23 @@ position:static !important;
 	margin: 0px auto;
 	}
 	
-	.enigma_callout_area{
+	.alpe_callout_area{
 		text-align:center;
 	}
-	.enigma_callout_area p{
+	.alpe_callout_area p{
 		margin-bottom:20px;
 		padding:0px;
 	}
-	.enigma_callout_btn {
+	.alpe_callout_btn {
 	float: none;	
 	}
 	/**** blog full width: ***/
-	.enigma_sidebar_left_side{
+	.alpe_sidebar_left_side{
 
 		float:none;
 
 	}
-	.enigma_blog_right_side{
+	.alpe_blog_right_side{
 		float:none;
 	}
 	
@@ -307,54 +307,54 @@ position:static !important;
 		display:flex;
 		margin-bottom: 0px;
 	}
-	.enigma_fuul_blog_detail_padding {
+	.alpe_fuul_blog_detail_padding {
 		padding-left: 0px;
 		padding-top:20px;
 	}
-	.enigma_blog_full .enigma_blog_thumb_wrapper_showcase {
+	.alpe_blog_full .alpe_blog_thumb_wrapper_showcase {
 		margin-bottom: 0px;
 	}
 	.navbar-collapse {
      max-height: none;
 	 }
-	 .enigma_project_section .caroufredsel_wrapper{
+	 .alpe_project_section .caroufredsel_wrapper{
 		height: 350px !important;
 	 }
-	 .enigma_client_area .caroufredsel_wrapper{
+	 .alpe_client_area .caroufredsel_wrapper{
 		height: 260px !important;
 	 }
-	 .enigma_project_detail_related_projet .caroufredsel_wrapper{ 
+	 .alpe_project_detail_related_projet .caroufredsel_wrapper{
 		height: 350px !important;
 	 }
 	 
 	/*** comment section **/
-	.enigma_comment_box .media-body {
+	.alpe_comment_box .media-body {
 	float: left;
 	}
-	/** enigma footer  copyright area ***/
-	 .enigma_footer_area{
+	/** alpe footer  copyright area ***/
+	 .alpe_footer_area{
 	 text-align:center;
 	 }
-	 .enigma_footer_copyright_info{
+	 .alpe_footer_copyright_info{
 		float:none;
 	}
-	.enigma_footer_social_div{
+	.alpe_footer_social_div{
 		float:none;
 	}
 	/** contact us page **/
-	.enigma_contact_form_fields{
+	.alpe_contact_form_fields{
 	padding-right: 15px;
 	padding-top: 30px;
 	padding-bottom: 30px;
 	border-right: 0px solid #E5E5E5;
 	}
-	.enigma_contact_info{
+	.alpe_contact_info{
 		padding-left: 15px;
 		padding-top: 30px;
 		padding-bottom: 30px;
 	}
 	/* gallery */
-	.enigma_gallery_blog{
+	.alpe_gallery_blog{
 	width: 49.9%;
 	margin-right: 0;
 	margin-bottom: 0;
@@ -363,7 +363,7 @@ position:static !important;
 	.carousel-indicators{
 		display:none;
 	}
-	/*.carousel-text .enigma_blog_read_btn{
+	/*.carousel-text .alpe_blog_read_btn{
 		display:none;
 	}*/
 	.carousel-caption {
@@ -403,12 +403,12 @@ position:static !important;
 	}
 	
 	/*** blog full width **/
-	.enigma_sidebar_left_side{
+	.alpe_sidebar_left_side{
 
 	float:none;
 
 	}
-	.enigma_blog_right_side{
+	.alpe_blog_right_side{
 	float:none;
 	}
 	
@@ -428,40 +428,40 @@ position:static !important;
 	.post-content-wrap-right {
 	width:100%;
 	}
-	.enigma_fuul_blog_detail_padding {
+	.alpe_fuul_blog_detail_padding {
 		padding-left: 0px;
 		padding-top:20px;
 	}
-	.enigma_blog_full .enigma_blog_thumb_wrapper_showcase {
+	.alpe_blog_full .alpe_blog_thumb_wrapper_showcase {
 		margin-bottom: 0px;
 	}
 	.navbar-collapse {
      max-height: none;
 	 }
-	.enigma_project_section .caroufredsel_wrapper{
+	.alpe_project_section .caroufredsel_wrapper{
 		height: 400px !important;
 	 }
-	 .enigma_project_detail_related_projet .caroufredsel_wrapper{ 
+	 .alpe_project_detail_related_projet .caroufredsel_wrapper{
 		height: 400px !important;
 	 }
-	 /** enigma footer  copyright area ***/
-	 .enigma_footer_area{
+	 /** alpe footer  copyright area ***/
+	 .alpe_footer_area{
 	 text-align:center;
 	 }
-	 .enigma_footer_copyright_info{
+	 .alpe_footer_copyright_info{
 		float:none;
 	}
-	.enigma_footer_social_div{
+	.alpe_footer_social_div{
 		float:none;
 	}
 	/** contact us page **/
-	.enigma_contact_form_fields{
+	.alpe_contact_form_fields{
 	padding-right: 15px;
 	padding-top: 30px;
 	padding-bottom: 30px;
 	border-right: 0px solid #E5E5E5;
 	}
-	.enigma_contact_info{
+	.alpe_contact_info{
 		padding-left: 15px;
 		padding-top: 30px;
 		padding-bottom: 30px;
@@ -474,13 +474,13 @@ position:static !important;
 	}
 }
 @media only screen and (min-width: 480px) and (max-width: 600px) {
-	.enigma_project_section .caroufredsel_wrapper{
+	.alpe_project_section .caroufredsel_wrapper{
 		height: 450px !important;
 	 }
-	 .enigma_client_area .caroufredsel_wrapper{
+	 .alpe_client_area .caroufredsel_wrapper{
 		height: 300px !important;
 	 }
-	 .enigma_project_detail_related_projet .caroufredsel_wrapper{ 
+	 .alpe_project_detail_related_projet .caroufredsel_wrapper{
 		height: 450px !important;
 	 }
 	 .carousel-indicators{
@@ -531,22 +531,22 @@ position:static !important;
 	.carousel-indicators{
 		display:none;
 	}
-	.enigma_callout_area{
+	.alpe_callout_area{
 		text-align:center;
 	}
-	.enigma_callout_area p{
+	.alpe_callout_area p{
 		margin-bottom:20px;
 		padding:0px;
 	}
-	.enigma_callout_btn {
+	.alpe_callout_btn {
 	float: none;	
 	}
-	.enigma_sidebar_left_side{
+	.alpe_sidebar_left_side{
 
 	float:none;
 
 	}
-	.enigma_blog_right_side{
+	.alpe_blog_right_side{
 	float:none;
 	}
 	/** blog full width ***/
@@ -575,90 +575,90 @@ position:static !important;
 		width:60px;
 		height:60px;
 	}
-	.enigma_post_date {
+	.alpe_post_date {
 		padding-top: 6px;
 		padding-left:2px;
 		padding-right:2px;
 		padding-bottom: 4px;
 	}
-	.enigma_post_date span.date {
+	.alpe_post_date span.date {
 		font-size: 30px;
 		line-height: 25px;
 	}
-	.enigma_post_date h6 {
+	.alpe_post_date h6 {
 		font-size: 10px;
 		line-height: 10px;
 		margin-top: 4px;
 	}
-	.enigma_post_author img {
+	.alpe_post_author img {
 		height: 60px !important;
 	}
 	
-	.enigma_blog_comment{
+	.alpe_blog_comment{
 		width: 60px;
 		padding-top: 6px;
 		padding-left:2px;
 		padding-right:2px;
 		padding-bottom: 6px;
 	}
-	.enigma_blog_comment a{
+	.alpe_blog_comment a{
 		color:#999999;
 	}
-	.enigma_blog_comment i{
+	.alpe_blog_comment i{
 		font-size: 30px;
 		line-height: 25px;
 		
 
 	}
-	.enigma_blog_comment h6{
+	.alpe_blog_comment h6{
 		font-size:12px;
 		margin-top:4px;
 		
 	}
-	.enigma_fuul_blog_detail_padding {
+	.alpe_fuul_blog_detail_padding {
 		padding-left: 0px;
 		padding-top:20px;
 	}
-	.enigma_blog_full .enigma_blog_thumb_wrapper_showcase {
+	.alpe_blog_full .alpe_blog_thumb_wrapper_showcase {
 		margin-bottom: 0px;
 	}
 		.navbar-collapse {
      max-height: none;
 	 }
-	.enigma_client_area .caroufredsel_wrapper{
+	.alpe_client_area .caroufredsel_wrapper{
 		height: 300px !important;
 	}
 	
 	/*** comment section **/
-	.enigma_comment_box .media-body {
+	.alpe_comment_box .media-body {
 	float: left;
 	}
-	/** enigma footer  copyright area ***/
-	 .enigma_footer_area{
+	/** alpe footer  copyright area ***/
+	 .alpe_footer_area{
 	 text-align:center;
 	 }
-	 .enigma_footer_copyright_info{
+	 .alpe_footer_copyright_info{
 		float:none;
 	}
-	.enigma_footer_social_div{
+	.alpe_footer_social_div{
 		float:none;
 	}
 	/* gallery */
-	.enigma_gallery_blog{
+	.alpe_gallery_blog{
 	width: 100%;
 	margin-right: 0;
 	margin-bottom: 0;
 	float: left;
 	}
 	
-	.carousel-text .enigma_blog_read_btn{
+	.carousel-text .alpe_blog_read_btn{
 		font-size:10px;
 	}
 	.carousel-caption {
 	top: -5px;
 	}
 	
-	.enigma_blog_post_content img{ 
+	.alpe_blog_post_content img{
 		width: auto;
 		height:auto;
 		display: block;
